WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225856
Fix compilation with vanilla clang 7.1.0
https://bugs.webkit.org/show_bug.cgi?id=225856
Summary
Fix compilation with vanilla clang 7.1.0
Dmitry Kalinkin
Reported
2021-05-16 11:30:51 PDT
webkitgtk> ../Source/WebCore/platform/graphics/ColorComponents.h:110:33: error: call to 'abs' is ambiguous webkitgtk> return map([](T c) { return std::abs(c); }); webkitgtk> ^~~~~~~~ webkitgtk> ../Source/WebCore/platform/graphics/filters/FETurbulence.cpp:344:88: note: in instantiation of member function 'WebCore::ColorComponents<float>::abs' requested here webkitgtk> turbulenceFunctionResult += noise2D(paintingData, stitchData, noiseVector).abs() / ratio; webkitgtk> ^ webkitgtk> /nix/store/wd30p2pq4lci8fk9fqldkgk1hgmwpapj-Libsystem-1238.60.2/include/stdlib.h:129:6: note: candidate function webkitgtk> int abs(int) __pure2; webkitgtk> ^ webkitgtk> /nix/store/3ndhndpas5zaxpa63gldf2xgcd2skd3y-libc++-7.1.0/include/c++/v1/stdlib.h:111:44: note: candidate function webkitgtk> inline _LIBCPP_INLINE_VISIBILITY long abs( long __x) _NOEXCEPT {return labs(__x);} webkitgtk> ^ webkitgtk> /nix/store/3ndhndpas5zaxpa63gldf2xgcd2skd3y-libc++-7.1.0/include/c++/v1/stdlib.h:113:44: note: candidate function webkitgtk> inline _LIBCPP_INLINE_VISIBILITY long long abs(long long __x) _NOEXCEPT {return llabs(__x);} webkitgtk> ^ webkitgtk> 3 warnings and 1 error generated.
Attachments
1/1
(1.49 KB, patch)
2021-05-16 11:32 PDT
,
Dmitry Kalinkin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dmitry Kalinkin
Comment 1
2021-05-16 11:32:35 PDT
Created
attachment 428797
[details]
1/1
Radar WebKit Bug Importer
Comment 2
2021-05-23 11:31:18 PDT
<
rdar://problem/78370467
>
EWS
Comment 3
2021-06-24 11:49:22 PDT
Committed
r279240
(
239125@main
): <
https://commits.webkit.org/239125@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 428797
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug