Use <cmath> instead of <math.h> https://bugs.webkit.org/show_bug.cgi?id=225856

This is needed to avoid ambiguity between abs and std::abs observed on
vanilla clang 7.1.0.

Patch by Dmitry Kalinkin <dmitry.kalinkin+webkit@gmail.com> on 2021-06-24
Reviewed by Fujii Hironori.

* platform/graphics/ColorComponents.h:

Canonical link: https://commits.webkit.org/239125@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279240 268f45cc-cd09-0410-ab3c-d52691b4dbfc